<resources>
    <string name="app_name">Meethere</string>
    <string name="facebook_app_id" translatable="false">463560493836897</string>
    <string name="facebook_button" translatable="false">connect_with_facebook</string>
    <string name="email">enter email</string>
    <string name="password" translatable="false">enter password</string>
    <string name="confirm_password">confirm password</string>
    <string name="log_in_with_email">log in with email</string>
    <string name="sign_up">sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_map">Location</string>
    <string name="title_activity_maps">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_places">MyPlacesActivity</string>
    <string-array name="menu_images">
        <item>@drawable/ic_event_black_48dp</item>
        <item>@drawable/ic_event_note_black_48dp</item>
        <item>@drawable/ic_person_add_black_48dp</item>
        <item>@drawable/ic_settings_black_48dp</item>
    </string-array>
    <string-array name="menu_name">
        <item>@string/my_events</item>
        <item>@string/news</item>
        <item>@string/edit_profile</item>
        <item>@string/settings</item>

    </string-array>
    <string-array name="category_images">


        <item>@drawable/avto_moto</item>
        <item>@drawable/ic_social</item>
        <item>@drawable/ic_party</item>
        <item>@drawable/for_single</item>
        <item>@drawable/spiritual</item>
        <item>@drawable/food</item>
        <item>@drawable/ic_animal</item>
        <item>@drawable/ic_helth</item>
        <item>@drawable/games</item>
        <item>@drawable/culture</item>
        <item>@drawable/business</item>
        <item>@drawable/cinema</item>
        <item>@drawable/books</item>
        <item>@drawable/biuty</item>
        <item>@drawable/music</item>
        <item>@drawable/outdoor</item>
        <item>@drawable/development</item>
        <item>@drawable/communication</item>
        <item>@drawable/paranormal</item>
        <item>@drawable/support</item>
        <item>@drawable/politic</item>
        <item>@drawable/family</item>
        <item>@drawable/comunity</item>
        <item>@drawable/sport</item>
        <item>@drawable/ic_lifestyle</item>
        <item>@drawable/tech</item>
        <item>@drawable/ic_fantacy</item>
        <item>@drawable/ic_fitness</item>
        <item>@drawable/phto</item>
        <item>@drawable/ic_hobby</item>
        <item>@drawable/ic_other</item>

    </string-array>
    <string name="title_activity_list">ListActivity</string>
    <string name="ololo" translatable="false">ololo</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="pref_example_list_values">

        <item>0</item>
        <item>1</item>
        <item>2</item>

    </string-array>
    <string name="pref_header_notification_in_facebook" translatable="false">Оповещания в Facebook</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>

        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="start_age" translatable="false">15</string>
    <string name="end_age" translatable="false">45</string>
    <string name="start_budget" translatable="false">0</string>
    <string name="end_budget" translatable="false">2000</string>
    <string name="see_on_map">Look on a map</string>
    <string name="action_settings">Settings</string>
    <string name="add_name">Enter title</string>
    <string name="aditional">Additional</string>
    <string name="adress">Address</string>
    <string name="age">Age</string>
    <string name="all_catrgory">All Categories</string>
    <string name="begining">Begin</string>
    <string name="bigger">Bigger</string>
    <string name="budget">Budget</string>
    <string-array name="category">


        <item>Avto/moto</item>
        <item>Friends</item>
        <item>Party</item>
        <item>Single</item>
        <item>Spiritual</item>
        <item>Food and Drinks</item>
        <item>Animals</item>
        <item>Wellness</item>
        <item>Play</item>
        <item>Art</item>
        <item>Business</item>
        <item>Movie</item>
        <item>Book</item>
        <item>Fashion and Beauty</item>
        <item>Music</item>
        <item>Outdoor</item>
        <item>Education and Development</item>
        <item>Social</item>
        <item>Paranormal</item>
        <item>Support</item>
        <item>Politics</item>
        <item>Family</item>
        <item>Community</item>
        <item>Sport and entertainment</item>
        <item>Lifestyle</item>
        <item>Technology</item>
        <item>Science fiction and fantasy</item>
        <item>Fitness</item>
        <item>Photography</item>
        <item>Hobby</item>
        <item>Other</item>
    </string-array>
    <string name="choose_category">Choose Category</string>
    <string name="choose_time">Choose Time</string>
    <string name="contact_information">Contact Info</string>
    <string name="created_by_me">My Events</string>
    <string name="createt_by_my">Created</string>
    <string name="day_of_birth">Date of Birth</string>
    <string name="description">Enter description</string>
    <string name="distance">Distance</string>
    <string name="do_not_matter">Does not metter</string>
    <string name="e_mail">Email</string>
    <string name="end">End</string>
    <string name="enter_location">Enter Address or pin on map</string>
    <string name="enter_preferences">Add Preferences</string>
    <string name="error_auth">Something goes wrong.. :(</string>
    <string name="end_radius" translatable="false">10000</string>
    <string name="exit">Exit</string>
    <string name="event">Create Event</string>
    <string name="favorite">Favorite</string>
    <string name="female">Female</string>
    <string name="filter">Filter</string>
    <string name="find">Categories</string>
    <string name="free">Free</string>
    <string name="from">From ...</string>
    <string name="future_events">Future events</string>
    <string name="gender">Gender</string>
    <string name="load_photo">Load Photo</string>
    <string name="location">Location</string>
    <string name="male">Male</string>
    <string name="more">More</string>
    <string name="my_events">My Events</string>
    <string name="my_location">My Location</string>
    <string name="my_preferences">My Preferences</string>
    <string name="new_event">Create</string>
    <string name="next">Next</string>
    <string name="ok">Ok</string>
    <string name="past_events">Past events</string>
    <string name="personal_information">Personal Information</string>
    <string name="pin">Pin on map</string>
    <string name="places">My Places</string>
    <string name="plan_to_visit">My meetings</string>
    <string name="pref_default_display_name" translatable="false"></string>
    <string name="pref_header_privacy">Privacy</string>
    <string name="telefone">Mob. phone</string>
    <string name="start">From</string>
    <string name="sort_by">Sort by </string>
    <string name="settings">Settings</string>
    <string name="repite">Repeat</string>
    <string name="price">Price</string>
    <string name="preferences">Preferences</string>
    <string name="pref_how_can_see_title">Who can see</string>
    <string name="pref_how_can_send_title">Who can send</string>
    <string name="pref_title_adding">Add attenders</string>
    <string name="pref_title_attends">Attend</string>
    <string name="pref_title_close_event">Nearest events</string>
    <string name="pref_title_coming_event">Upcoming events</string>
    <string name="pref_title_comments_mass">Notifications</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_email">Email</string>
    <string name="pref_title_interesting_event">Interesting events</string>
    <string name="pref_title_phone">Phone</string>
    <string name="pref_title_preferences">Preferences</string>
    <string name="pref_title_private_information">Private Info</string>
    <string name="pref_title_send_mass">Message</string>
    <string name="profile">Profile</string>
    <string name="promo_1">Need some body to play football?</string>
    <string name="promo_2">Noone wants to fish with you?</string>
    <string name="promo_3">Don\'t know how to spend time?</string>
    <string name="quantity">Amount of people</string>
    <string name="skype">Skype</string>
    <string name="start_radius" translatable="false">0</string>
    <string name="time_difference">Time bound</string>
    <string name="to">.. till</string>
    <string name="use">Apply</string>
    <string name="week">weeks</string>
    <string name="make_comment">Make an Comment</string>
    <string name="events">Events</string>
    <string name="people">Friends</string>
    <string name="no_results">Result not found</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="follow">Follow</string>
    <string name="one_week">week</string>
    <string name="two_weeks">weeks</string>
    <string name="five_weeks">weeks</string>
    <string name="notification_invite">%1$s invites you to %2$s</string>
    <string name="notification_joined">%1$s just joined  to %2$s</string>
    <string name="notification_create_event">%1$s created event %2$s</string>
    <string name="notification_follow">%1$s started following you</string>
    <string name="notification_comment">%1$s commented %2$s</string>
    <string name="unfollow">Unfollow</string>
    <string name="set_birthday">set birthday</string>
    <string name="set_email">set email</string>
    <string name="set_location">set location</string>
    <string name="set_phone">set phone</string>
    <string name="add">Add</string>
    <string name="news">My news</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="remove_this_comment">Delete this comment?</string>
    <string name="joned_event">   Join event</string>
    <string name="edit_event">Edit event</string>
    <string name="invite_friends">Invite friends</string>
    <string name="leave_event">Leave event</string>
    <string name="edit_profile">Edit profile</string>
    <string name="title_activity_test_calendar">TestCalendar</string>
    <string name="events_allready_created">Event is already in calendar</string>
    <string name="friends_invited">Invitation send</string>
    <string name="hrn">UAH</string>
    <string name="created_event">create new event</string>
    <string name="invite">invite you to join</string>
    <string name="join">joined to your meeting</string>
    <string name="submit">LOG IN</string>
    <string name="back">BACK</string>
    <string name="pref_title_messages">Comments to events</string>
</resources>