<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_how_can_see_title"
        android:key="pref_key_storage_settings">

    <!--<SwitchPreference-->
        <!--android:key="notifications_new_message"-->
        <!--android:title="@string/pref_title_new_message_notifications"-->
        <!--android:defaultValue="true" />-->

    <!--&lt;!&ndash; Allows the user to choose a ringtone in the 'notification' name. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: RingtonePreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<RingtonePreference-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="notifications_new_message_ringtone"-->
        <!--android:title="@string/pref_title_ringtone"-->
        <!--android:ringtoneType="notification"-->
        <!--android:defaultValue="content://settings/system/notification_sound" />-->

    <!--&lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;-->
    <!--<SwitchPreference-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="notifications_new_message_vibrate"-->
        <!--android:title="@string/pref_title_vibrate"-->
        <!--android:defaultValue="true" />-->


        <ListPreference
        android:key="email_list"
        android:title="@string/pref_title_email"
        android:defaultValue="-1"
        android:entries="@array/pref_notification_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@string/ok"
        />

        <ListPreference
            android:key="phone_list"
            android:title="@string/pref_title_phone"
            android:defaultValue="-1"
            android:entries="@array/pref_notification_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:negativeButtonText="@string/ok"/>



        <ListPreference
            android:key="private_info_list"
            android:title="@string/pref_title_private_information"
            android:defaultValue="-1"
            android:entries="@array/pref_notification_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:negativeButtonText="@string/ok"/>

        <ListPreference
            android:key="preferences_list"
            android:title="@string/pref_title_preferences"
            android:defaultValue="-1"
            android:entries="@array/pref_notification_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:negativeButtonText="@string/ok"/>
        <ListPreference
            android:key="attends_list"
            android:title="@string/pref_title_attends"
            android:defaultValue="-1"
            android:entries="@array/pref_notification_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:negativeButtonText="@string/ok" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_how_can_see_title"
        android:key="pref_key_">

    <ListPreference
        android:key="send_mass_list"
        android:title="@string/pref_title_send_mass"
        android:defaultValue="-1"
        android:entries="@array/pref_notification_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
    </PreferenceCategory>



</PreferenceScreen>
