<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.polina.meethere.activities.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_notifications" android:icon="@drawable/ic_info_black_24dp" />

    <header
        android:fragment="com.example.polina.meethere.activities.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_privacy"
        android:icon="@drawable/ic_notifications_black_24dp" />

    <header
        android:fragment="com.example.polina.meethere.activities.SettingsActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_header_notification_in_facebook" android:icon="@drawable/com_facebook_button_icon_blue" />

</preference-headers>
