<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="messages"
        android:title="@string/pref_title_messages"

        android:defaultValue="true" />

    <SwitchPreference
        android:key="upcoming_events"
        android:title="@string/pref_title_coming_event"

        android:defaultValue="true" />
    <SwitchPreference
        android:key="near_events"
        android:title="@string/pref_title_close_event"

        android:defaultValue="true" />
    <SwitchPreference
        android:key="recommended_events"
        android:title="@string/pref_title_interesting_event"
        android:defaultValue="true" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:key="example_text"-->
        <!--android:title="@string/pref_title_display_name"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:inputType="textCapWords"-->
        <!--android:capitalize="words"-->
        <!--android:singleLine="true"-->
        <!--android:maxLines="1" />-->

    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
         <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<ListPreference-->
        <!--android:key="example_list"-->
        <!--android:title="@string/pref_title_add_friends_to_messages"-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null" />-->

</PreferenceScreen>
