<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:layout_above="@+id/login_password1"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password1"
        android:hint="@string/password"
        android:layout_above="@+id/login_password2"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password2"
        android:hint="@string/confirm_password"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" />

</RelativeLayout>