<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchFiltersActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/textView42" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView42"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:id="@+id/linearLayout4"
        android:gravity="center_vertical">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/spinner_category" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_difference"
        android:id="@+id/textView43"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView43"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout5">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:id="@+id/button_from"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="onStartDate"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="7dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:id="@+id/button_till"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="onAndDate"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:id="@+id/textView44"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView44"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout9">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/start_age"
                android:id="@+id/leftIndexValue"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.edmodo.rangebar.RangeBar
                    xmlns:custom="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/range_bar_ege"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:tickCount="30" />
            </LinearLayout>

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/end_age"
                android:id="@+id/rightIndexValue"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:id="@+id/textView45"
        android:layout_below="@+id/linearLayout9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView45"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/start_budget"
                android:id="@+id/leftIndexValue_budget"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.edmodo.rangebar.RangeBar
                    xmlns:custom="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/range_bar_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:tickCount="41" />
            </LinearLayout>

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/end_budget"
                android:id="@+id/rightIndexValue_budget"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal" />


        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free"
        android:id="@+id/checkBox9"
        android:layout_alignTop="@+id/textView45"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:layout_marginRight="16dp" />
</RelativeLayout>
