<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.polina.meethere.ListOfEventsActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/events_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout2"
        android:layout_marginBottom="15dp"
        android:background="#861738f8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white" />


    </LinearLayout>


</RelativeLayout>
